[package]
name = "async-component-winit"
description = "winit async-component wrapper"
version = "0.1.0"
edition = "2021"

authors = [
    "storycraft <storycraft@pancake.sh>"
]
license = "Apache-2.0"
repository = "https://github.com/storycraft/async-component"

[dependencies]
async-component = { version = "0.2.0", path = "../async-component" }

winit = "0.27.5"
parking_lot = "0.12.1"
