[package]
name = "async-component"
description = "Compose ui components with Stream"
version = "0.2.4"
edition = "2021"
readme = "../readme.md"

authors = [
    "storycraft <storycraft@pancake.sh>"
]
license = "Apache-2.0"
repository = "https://github.com/storycraft/async-component"

[dependencies]
async-component-macro = { version = "0.2.3", path = "../async-component-macro" }

futures-core = "0.3.25"
bitflags = "1.3.2"

[dev-dependencies]
futures = "0.3.25"
tokio = { version = "1", features = ["full"] }
