[package]
name = "async-component"
description = "Zero overhead reactive programming"
keywords = ["asynchronous", "reactive", "stream"]
categories = ["asynchronous"]
version = "0.5.4"
edition = "2021"
readme = "../readme.md"

authors = [
    "storycraft <storycraft@pancake.sh>"
]
license = "Apache-2.0"
repository = "https://github.com/storycraft/async-component"

[dependencies]
async-component-core = { version = "0.5.4", path = "../crates/core" }
async-component-macro = { version = "0.5.4", path = "../crates/macro" }
async-component-components = { version = "0.5.4", path = "../crates/components" }

[dev-dependencies]
futures = "0.3.25"
tokio = { version = "1", features = ["full"] }
