[package]
name = "async-component-components"
description = "async-component components"
keywords = ["async-component"]
categories = ["asynchronous"]
version = "0.5.3"
edition = "2021"
readme = "README.md"

authors = [
    "storycraft <storycraft@pancake.sh>"
]
license = "Apache-2.0"
repository = "https://github.com/storycraft/async-component"

[dependencies]
async-component-core = { version = "0.5.3", path = "../core" }
