[package]
name = "async-component-core"
description = "Zero overhead reactive programming"
keywords = ["asynchronous", "reactive", "stream"]
categories = ["asynchronous"]
version = "0.4.0"
edition = "2021"

authors = [
    "storycraft <storycraft@pancake.sh>"
]
license = "Apache-2.0"
repository = "https://github.com/storycraft/async-component"

[dependencies]
futures-core = "0.3.25"
bitflags = "1.3.2"
