[package]
name = "async-component-macro"
description = "async-component derive macro"
version = "0.6.0"
edition = "2021"

authors = [
    "storycraft <storycraft@pancake.sh>"
]
license = "Apache-2.0"
repository = "https://github.com/storycraft/async-component"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
proc-macro2 = "1.0"
