[package]
name = "async-component-winit"
description = "winit async-component wrapper"
keywords = ["winit", "async-component"]
categories = ["asynchronous"]
version = "0.6.0"
edition = "2021"
readme = "README.md"

authors = [
    "storycraft <storycraft@pancake.sh>"
]
license = "Apache-2.0"
repository = "https://github.com/storycraft/async-component"

[dependencies]
async-component-core = { version = "0.6.0", path = "../core" }
async-component-components = { version = "0.6.0", path = "../components" }

winit = "0.27.5"
parking_lot = "0.12.1"
ref-extended = "0.2.1"
